MOSIP-42357 reverted null check for MatchInputBuilder
Signed-off-by: kameshsr <kameshsr1338@gmail.com>